Limpiando codigo sin uso y actualizando el archivo README.md e index.js

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML MediaElement Audio Player</title>
 </head>
 <body>
     <h1 id="title">HTML MediaElement Audio Player</h1>
@@ -12,7 +12,6 @@
     <audio id="audio" controls autoplay></audio>
     <br>
     <button id="play">Play</button>
-    <button id="audioCcntext">AudioContext</button>
     <script src="./index.js"></script>
 </body>
 </html>
